<resources>
    <string name="app_name">São Gastão</string>
    <string name="action_orcamento">Orçamento total</string>
    <string name="action_zerar">Limpar lista</string>
    <string name="action_sobre">Sobre</string>
    <string name="action_ordenar">Ordenar por...</string>
    <string name="form_titulo_descricao">Descrição</string>
    <string name="form_titulo_quantidade">Quantidade</string>
    <string name="form_titulo_valorunitario">Valor Unitário (R$)</string>
    <string name="form_bt_salvar">Salvar</string>
    <string name="form_bt_cancelar">Cancelar</string>
    <string name="form_bt_excluir">Excluir</string>
    <string name="form_bt_atualizar">Atualizar</string>
    <string name="main_list_empty">Está tão vazio aqui… :( \nQue tal colocar um novo item?</string>
</resources>
